<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_10sdp"
        android:background="@drawable/bg_rounded"
        android:paddingVertical="@dimen/_15sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txtRateUs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rate_us"
            android:textColor="@color/black"
            android:textSize="@dimen/_15sdp"
            app:layout_constraintBottom_toTopOf="@id/ratingBar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <androidx.appcompat.widget.AppCompatRatingBar
            android:id="@+id/ratingBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/_15sdp"
            android:numStars="5"
            android:progressTint="@color/selected_star_color"
            android:stepSize="1"
            app:layout_constraintBottom_toTopOf="@id/btnRateUs"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txtRateUs" />




        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnRateUs"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:background="@drawable/bg_rate"
            android:paddingHorizontal="@dimen/_10sdp"
            android:text="@string/rate_now"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/_13sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ratingBar" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/btnLater"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_20sdp"
            android:text="@string/later"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="@dimen/_15sdp"
            app:layout_constraintBottom_toBottomOf="@id/btnRateUs"
            app:layout_constraintEnd_toStartOf="@id/btnRateUs"
            app:layout_constraintTop_toTopOf="@id/btnRateUs" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>